[package]
name = "danalyze"
version = "0.1.0"
edition = "2021"
authors = ["Adem <spirnet@hotmail.com>"]
description = "Analyze your current directory, show files/folders as list with their sizes."
license = "None"
repository = "https://github.com/phibersoft/danalyze"
homepage = "https://github.com/phibersoft/danalyze"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
fs_extra = "1.3.0"
tabled = "0.15.0"

[[bin]]
name = "danalyze"
path = "src/main.rs"